--- a/html/index.html
+++ b/html/index.html
@@ -7,9 +7,8 @@
      <title>Журнал</title>
 </head>
 <body>
-
      <header>
-       <h2 class="logo"> <a href="index.html">ГАКОУ</a></h2>
+       <h2 class="logo"> <a href="index.html">ЗП</a></h2>
        <div class="d1">
           <form>
           <input type="text" placeholder="Искать здесь...">
