--- a/html/index.html
+++ b/html/index.html
@@ -30,6 +30,12 @@
           </ul>
         </nav>
      </header>
+     <section>
+
+     </section>
+     <aside>
+          
+     </aside>
      
 </body>
 </html>
