--- a/html/account.html
+++ b/html/account.html
@@ -8,7 +8,7 @@
 </head>
 <body>
      <header>
-        <h2 class="logo"> <a href="index.html">ГАКОУ</a></h2>
+        <h2 class="logo"> <a href="index.html">ЗП</a></h2>
          <nav class="navigation">
            <ul>
                 <li><a href="index.html">Услуги</a></li>
