--- a/html/index.html
+++ b/html/index.html
@@ -9,8 +9,8 @@
 </head>
 <i>
      <header>
-       <h2 class="logo"> <a href="index.html">ЗП</a></h2>
-        <nav class="navigation">
+     <h2 class="logo"> <a href="index.html">ЗП</a></h2>
+     <nav class="navigation">
           <ul>
                <li><a href="index.html">Запись</a></li>
                <li><a href="#">Журнал записей</a></li>
@@ -20,58 +20,80 @@
                          <li><a href="account.html">
                               <span class="material-icons-sharp">
                                    person_outline
-                               </span>
+                         </span>
                               Личный кабинет</a></li>
                          <li><a href="#">
                               <span class="material-icons-sharp">
                                    admin_panel_settings
-                               </span>
-                          Админпанель</a></li>
+                         </span>
+                         Админпанель</a></li>
                          <li><a href="login.html">
                               <span class="material-icons-sharp">
                                    logout
-                               </span>
+                              </span>
                               Выход</a></li>
                     </ul>
                </li>
           </ul>
-        </nav>
+     </nav>
      </header>
      <section class="record">
-          <h1>Запись</h1>
+          <div class="header-block">
+               <h1>Запись</h1>
+          </div>
+          <div class="block">
+               <img src="../img/Иванов.jpg" alt="">
+               <h3>Иванов Иван Иванович</h3>
+               <p>Кабинет: 123</p>
+               <button class="button-appointment">Записаться</button>
+          </div>
+          <div class="block">
+               <img src="../img/Петров.jpg" alt="">
+               <h3>Петров Петр Петрович</h3>
+               <p>Кабинет: 234</p>
+               <button class="button-appointment">Записаться</button>
+          </div>
+          <div class="block">
+               <img src="../img/Сидоров.jpg" alt="">
+               <h3>Сидоров Сидор Сидорович</h3>
+               <p>Кабинет: 345</p>
+               <button class="button-appointment">Записаться</button>
+          </div>
      </section>
      <aside class="filter">
-          <h1>Фильтр</h1>
+          <div class="header-block">
+               <h1>Фильтр</h1>
+          </div>
      </aside>
      <footer>
           <div class="footer-content container">
-            <div class="footer-content-block">
+          <div class="footer-content-block">
                <h2 class="logo"> <a href="index.html">ЗП</a></h2>
-              <p>
-                Какае-то информация, которая должна что-то объястнять пользователям.
-              </p>
-              <span>©Абра-кадабра 2023. Все права защищены</span>
-            </div>
-            <div class="footer-content-block">
-              <h2 >
+          <p>
+               Какае-то информация, которая должна что-то объястнять пользователям.
+          </p>
+          <span>©Абра-кадабра 2023. Все права защищены</span>
+          </div>
+          <div class="footer-content-block">
+          <h2 >
                Телефон:
-              </h2>
-              <span>
+          </h2>
+          <span>
                +7(837)23 342 2
-              </span>
-              <h2>
+          </span>
+          <h2>
                Электроная почта:
-              </h2>
-              <span>
+          </h2>
+          <span>
                company@gmail.ru
-              </span>
-              <h2>
+          </span>
+          <h2>
                Адрес:
-              </h2>
-              <span>
+          </h2>
+          <span>
                г.Оренбург ул. Чкалова д. 26
-              </span>
-            </div>
+          </span>
+          </div>
           </div>
      </footer>
      
