--- a/html/index.html
+++ b/html/index.html
@@ -42,21 +42,35 @@
                <h1>Запись</h1>
           </div>
           <div class="block">
-               <img src="../img/Иванов.jpg" alt="">
-               <h3>Иванов Иван Иванович</h3>
-               <p>Кабинет: 123</p>
+               <div class="block-info">
+                    <img src="../img/Иванов.png" alt="">
+                    <h3>Голубев Павел Иванович</h3>
+                    <p>Кабинет: 123</p>  
+               </div>
                <button class="button-appointment">Записаться</button>
           </div>
           <div class="block">
-               <img src="../img/Петров.jpg" alt="">
-               <h3>Петров Петр Петрович</h3>
-               <p>Кабинет: 234</p>
+               <div class="block-info">
+                    <img src="../img/Петров.png" alt="">
+                    <h3>Петров Дмитрий Сергеевич</h3>
+                    <p>Кабинет: 234</p>
+               </div>
                <button class="button-appointment">Записаться</button>
           </div>
           <div class="block">
-               <img src="../img/Сидоров.jpg" alt="">
-               <h3>Сидоров Сидор Сидорович</h3>
-               <p>Кабинет: 345</p>
+               <div class="block-info">
+                    <img src="../img/Сидоров.png" alt="">
+                    <h3>Сидоров Михаил Сидорович</h3>
+                    <p>Кабинет: 345</p>
+               </div>
+               <button class="button-appointment">Записаться</button>
+          </div>
+          <div class="block">
+               <div class="block-info">
+                    <img src="../img/Сидоров.png" alt="">
+                    <h3>Заборов Алексей Павлович</h3>
+                    <p>Кабинет: 111</p>
+               </div>
                <button class="button-appointment">Записаться</button>
           </div>
      </section>
