--- a/html/login.html
+++ b/html/login.html
@@ -7,7 +7,7 @@
      <title>Login</title>
 </head>
 <body>
- <div class="container">
+ <div class="container-log">
     <div class="container-blur">
         <div class="login-container">
          <h3>Авторизация</h3>
