--- a/html/reg.html
+++ b/html/reg.html
@@ -7,7 +7,7 @@
      <title>Login</title>
 </head>
 <body>
- <div class="container"> 
+ <div class="container-log"> 
     <div class="container-blur">
         <div class="login-container">
          <h3>Регистрация</h3>
@@ -38,5 +38,6 @@
      </div>
     </div>
  </div>
+ <script src="../script/reg.js"></script>
 </body>
 </html>
