--- a/html/reg.html
+++ b/html/reg.html
@@ -7,11 +7,11 @@
      <title>Login</title>
 </head>
 <body>
- <div class="container-log"> 
+ <div class="container"> 
     <div class="container-blur">
         <div class="login-container">
          <h3>Регистрация</h3>
-         <form>
+         <form action="../modul/sheck.php" method="post">
                <div class="input-group">
                     <label for="email">ФИО:</label>
                     <input type="text" id="text" name="fullName" required>  
@@ -38,6 +38,5 @@
      </div>
     </div>
  </div>
- <script src="../script/reg.js"></script>
 </body>
 </html>
