--- a/html/login.html
+++ b/html/login.html
@@ -7,11 +7,13 @@
      <title>Login</title>
 </head>
 <body>
- <div class="container-log">
+    
+ 
+ <div class="container">
     <div class="container-blur">
         <div class="login-container">
          <h3>Авторизация</h3>
-         <form>
+         <form action="../modul/auth.php" method="post">
              <div class="input-group">
                  <label for="email">Email:</label>
                  <input type="email" id="email" name="email" required>  
